<resources>
    <string name="app_name">Cafe App</string>
    <string name="cafe_logo_description">A physically appealing, but minimalistic cafe logo</string>
    <string name="reviewQuote">\"The best cafe in the local area\" - TripAdvisor Dave</string>
    <string name="create_an_account">Create An Account</string>
    <string name="login">Login</string>
    <string name="login_with_google">Login With Google 1 Click</string>
    <string name="enter_your_email">Enter your Email</string>
    <string name="enter_your_password">Enter your Password</string>
    <string name="title_activity_dashboard">Dashboard</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="shop">Shop</string>
    <string name="cart">Cart</string>
    <string name="default_web_client_id">1091791408336-hlsfcpmo2leec45m0n1a9f8ath7615p7.apps.googleusercontent.com</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu">Menu</string>
    <string name="checkout">Checkout</string>
    <string name="notifications">Notifications</string>
    <string name="tea">Tea</string>
    <string name="coffee">Coffee</string>
    <string name="snacks">Snacks</string>
    <string name="merch">Merch</string>
    <string name="category_title">Category Title</string>
    <string name="product_name">Product Name</string>
    <string name="product_description">Product Description</string>
    <string name="product_price">£%1$.2f</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="product_name_placeholder">Product Name</string>
    <string name="product_description_placeholder">Product Description</string>
    <string name="price_placeholder">Price: £%s</string>
    <string name="quantity_placeholder">Quantity: %d</string>
    <string name="total_price_placeholder">Total: 0.00</string>
    <string name="total_price">Total: £%.2f</string>
    <string name="enter_your_username">Enter Your Username</string>
    <string name="cakes">Cakes</string>
    <string name="email">Email</string>
    <string name="full_name">Full Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="update_info">Update Information</string>
    <string name="accountsettings">Account Settings</string>
    <string name="order_status_pending">Order Status: </string>
    <string name="total_price_0_00">Total Price: £</string>
    <string name="payment_method_n_a">"Payment Method: "</string>
    <string name="card_number">Card Number</string>
    <string name="expiry_date">Expiry Date</string>
    <string name="security_cvc">Security CVC</string>
    <string name="cart_empty">Empty Cart</string>
    <string name="fill_in_card_details">Fill In Card Details</string>
    <string name="cancel">Cancel</string>
    <string name="confirm">Confirm</string>

    <string name="order_status">Order Status: %s</string>
    <string name="order_details">Order Details: %s</string>
    <string name="payment_method">Payment Method: %s</string>
    <string name="order_id">Order ID: %d</string>
    <string name="payment_date">Payment Date: %s</string>
    <string name="increment">+</string>
    <string name="decrement">-</string>
    <string name="remove">Remove</string>
    <string name="proceed_to_checkout">Proceed to Checkout</string>
    <string name="pay_by_cash">Pay by Cash</string>
    <string name="pay_by_card">Pay by Card</string>
    <string name="rate_your_order">Rate Your Order</string>
    <string name="comments_optional">Comments (Optional)</string>
    <string name="leave_feedback">Leave Feedback</string>
    <string name="ok">OK</string>
    <string name="email_icon">Email Icon</string>
    <string name="the_cafe_logo">The Cafe Logo</string>
    <string name="product_image">Product Image</string>


</resources>