<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_menu"
            android:icon="@drawable/baseline_shopping_bag_24"
            android:title="@string/menu" />
        <item
            android:id="@+id/nav_checkout"
            android:icon="@drawable/baseline_shopping_cart_checkout_24"
            android:title="@string/checkout" />
        <item
            android:id="@+id/nav_notifications"
            android:icon="@drawable/ic_notifications_black_24dp"
            android:title="@string/notifications" />
        <item
            android:id="@+id/nav_accountsettings"
            android:icon="@drawable/baseline_settings_24"
            android:title="@string/accountsettings" />
    </group>
</menu>