<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.accountsettings.AccountSettingsFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <EditText
            android:id="@+id/editTextFullName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/pacifico"
            android:hint="@string/full_name"
            android:inputType="text"
            android:autofillHints="" />

        <EditText
            android:id="@+id/editTextEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/pacifico"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:autofillHints="" />

        <EditText
            android:id="@+id/editTextPhoneNo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/pacifico"
            android:hint="@string/phone_number"
            android:inputType="phone"
            android:autofillHints="" />

        <EditText
            android:id="@+id/editTextUserName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/pacifico"
            android:hint="@string/username"
            android:inputType="text"
            android:autofillHints="" />

        <EditText
            android:id="@+id/editTextPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/pacifico"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:autofillHints="" />

        <Button
            android:id="@+id/buttonUpdateInfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/pacifico"
            android:text="@string/update_info" />
    </LinearLayout>
</ScrollView>
