<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <!-- Input fields for card number, expiry date, security number, and full name -->
    <EditText
        android:id="@+id/cardNumberEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/pacifico"
        android:hint="@string/card_number"
        android:inputType="number"
        android:autofillHints="" />

    <EditText
        android:id="@+id/cardExpiryDateEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/pacifico"
        android:hint="@string/expiry_date"
        android:inputType="text"
        android:autofillHints="" />

    <EditText
        android:id="@+id/cardSecurityNumberEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/pacifico"
        android:hint="@string/security_cvc"
        android:inputType="number"
        android:autofillHints="" />

    <EditText
        android:id="@+id/cardFullNameEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/pacifico"
        android:hint="@string/full_name"
        android:inputType="text"
        android:autofillHints="" />

    <!-- Confirm and Cancel buttons -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="16dp">

        <Button
            android:id="@+id/confirmButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/pacifico"
            android:text="@string/ok"
            style="?android:attr/buttonBarButtonStyle" />

        <Button
            android:id="@+id/cancelButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/pacifico"
            android:text="@string/cancel"
            style="?android:attr/buttonBarButtonStyle" />
    </LinearLayout>

</LinearLayout>
