<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_menu">

    <fragment
        android:id="@+id/nav_menu"
        android:name="cafe.app.ui.menu.MenuFragment"
        android:label="@string/menu"
        tools:layout="@layout/fragment_menu" />

    <fragment
        android:id="@+id/nav_checkout"
        android:name="cafe.app.ui.checkout.CheckoutFragment"
        android:label="@string/checkout"
        tools:layout="@layout/fragment_checkout" />

    <fragment
        android:id="@+id/nav_notifications"
        android:name="cafe.app.ui.notifications.NotificationsFragment"
        android:label="@string/notifications"
        tools:layout="@layout/fragment_notifications" />

    <fragment
        android:id="@+id/nav_accountsettings"
        android:name="cafe.app.ui.accountsettings.AccountSettingsFragment"
        android:label="@string/accountsettings"
        tools:layout="@layout/fragment_account_settings" />

    <fragment
        android:id="@+id/nav_admin"
        android:name="cafe.app.ui.admin.AdminFragment"
        android:label="Admin"
        tools:layout="@layout/fragment_admin_panel"
        />
</navigation>