<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="cafe.app.ui.menu.MenuFragment">

    <!-- Navigation Bar with Stylish Buttons -->
    <LinearLayout
        android:id="@+id/navigationBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/colorPrimaryVariant"
        app:layout_constraintTop_toTopOf="parent">

        <!-- Button for Tea -->
        <TextView
            android:id="@+id/buttonTea"
            style="@style/NavigationButtonStyle"
            android:text="@string/tea" />

        <!-- Button for Coffee -->
        <TextView
            android:id="@+id/buttonCoffee"
            style="@style/NavigationButtonStyle"
            android:text="@string/coffee" />

        <!-- Button for Cakes -->
        <TextView
            android:id="@+id/buttonCakes"
            style="@style/NavigationButtonStyle"
            android:text="@string/cakes" />

        <!-- Button for Snacks -->
        <TextView
            android:id="@+id/buttonSnacks"
            style="@style/NavigationButtonStyle"
            android:text="@string/snacks" />

        <!-- Button for Merch -->
        <TextView
            android:id="@+id/buttonMerch"
            style="@style/NavigationButtonStyle"
            android:text="@string/merch" />
    </LinearLayout>

    <!-- ScrollView for Category Containers -->
    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/navigationBar"
        app:layout_constraintBottom_toBottomOf="parent">

        <LinearLayout
            android:id="@+id/containerForCategories"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <include layout="@layout/category_container"
                android:id="@+id/containerTeaMenu"
                android:tag="tea"/>

            <include layout="@layout/category_container"
                android:id="@+id/containerCoffeeMenu"
                android:tag="coffee"/>

            <include layout="@layout/category_container"
                android:id="@+id/containerCakesMenu"
                android:tag="@string/cakes"/>

            <include layout="@layout/category_container"
                android:id="@+id/containerSnacksMenu"
                android:tag="snacks"/>

            <include layout="@layout/category_container"
                android:id="@+id/containerMerchandiseMenu"
                android:tag="merchandise"/>

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>
