<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/accountCreation_login_logo"
        android:layout_width="410dp"
        android:layout_height="341dp"
        android:layout_marginStart="2dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="2dp"
        android:contentDescription="@string/cafe_logo_description"
        android:src="@drawable/cafe_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/accountCreation_login_emailEntry"
        android:layout_width="320dp"
        android:layout_height="48dp"
        android:layout_marginStart="46dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="46dp"
        android:fontFamily="@font/pacifico"
        android:hint="@string/enter_your_email"
        android:inputType="textEmailAddress"
        android:textColorHint="#616161"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/accountCreation_login_logo"
        android:autofillHints="" />

    <EditText
        android:id="@+id/accountCreation_login_passwordEntry"
        android:layout_width="320dp"
        android:layout_height="48dp"
        android:layout_marginStart="46dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="46dp"
        android:fontFamily="@font/pacifico"
        android:hint="@string/enter_your_password"
        android:inputType="textPassword"
        android:textColorHint="#616161"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/accountCreation_login_emailEntry"
        android:autofillHints="" />

    <Button
        android:id="@+id/accountCreation_login_loginButton"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="320dp"
        android:layout_height="48dp"
        android:layout_marginStart="46dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="46dp"
        android:fontFamily="@font/pacifico"
        android:text="@string/login"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="#795548"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/accountCreation_login_passwordEntry" />


</androidx.constraintlayout.widget.ConstraintLayout>